# velox-terminal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agents/: backtesting.md  broker-integration.md  charting-engine.md  compliance.md  cross-platform-build.md  dependency-maint.md  devops.md  event-bus.md  frontend-egui.md  lead.md  licensing.md  market-data-arch.md  market-data-feed.md  oms.md  performance.md  product-financiero.md  qa-financiero.md  release-management.md  risk-management.md  scripting-engine.md  seguridad.md  soporte-triage.md  sre-observability.md  systems-architect.md  tech-indicators.md  time-series-storage.md  ui-ux-trading.md
crates/velox-backtest/: Cargo.toml
crates/velox-backtest/src/: engine.rs  lib.rs  metrics.rs  slippage.rs
crates/velox-broker/: Cargo.toml
crates/velox-broker-fix/: Cargo.toml
crates/velox-broker-fix/src/: lib.rs  messages.rs  session.rs  transport.rs
crates/velox-broker/src/: client.rs  error.rs  lib.rs  mock.rs
crates/velox-chart/: Cargo.toml
crates/velox-chart/src/: interaction.rs  lib.rs  overlay.rs  renderer.rs
crates/velox-chart/src/interaction/: mod.rs  tests.rs
crates/velox-chart/src/renderer/: mod.rs  pipelines.rs  types.rs
crates/velox-core/: Cargo.toml
crates/velox-core/src/: error.rs  event.rs  lib.rs  market.rs  order.rs  types.rs
crates/velox-exchange/: Cargo.toml
crates/velox-exchange/src/: binance.rs  binance_broker.rs  binance_rest.rs  binance_user_data.rs  error.rs  keyring.rs  lib.rs  trait.rs
crates/velox-exchange/src/binance_broker/: format.rs  mod.rs  tests.rs
crates/velox-exchange/src/binance_rest/: mod.rs  tests.rs  types.rs
crates/velox-exchange/src/binance_user_data/: mod.rs  tests.rs  types.rs
crates/velox-gpu/: Cargo.toml
crates/velox-gpu/shaders/: candle.wgsl  grid.wgsl  line.wgsl  volume.wgsl
crates/velox-gpu/src/: device.rs  error.rs  lib.rs  pipeline.rs  shaders.rs
crates/velox-indicators/: Cargo.toml
crates/velox-indicators/src/: atr.rs  bollinger.rs  ema.rs  lib.rs  macd.rs  rsi.rs  sma.rs  traits.rs  vwap.rs
crates/velox-md/: Cargo.toml
crates/velox-md/src/: aggregation.rs  feed.rs  lib.rs  pipeline.rs  ring_buffer.rs
crates/velox-oms/: Cargo.toml
crates/velox-oms/proptest-regressions/: order_manager.txt
crates/velox-oms/src/: error.rs  lib.rs  order_manager.rs  paper_trader.rs  state_machine.rs
crates/velox-oms/src/paper_trader/: execution.rs  mod.rs  position.rs  tests.rs  types.rs
crates/velox-risk/: Cargo.toml
crates/velox-risk/src/: circuit_breaker.rs  error.rs  lib.rs  limits.rs  validators.rs
crates/velox-scripting/: Cargo.toml
crates/velox-scripting/src/: api.rs  engine.rs  lib.rs  sandbox.rs
crates/velox-storage/: Cargo.toml
crates/velox-storage/src/: compression.rs  engine.rs  lib.rs  schema.rs
crates/velox-terminal/: Cargo.toml
crates/velox-terminal/src/: app.rs  input.rs  main.rs
crates/velox-ui/: Cargo.toml
crates/velox-ui/src/: app_state.rs  lib.rs  panels.rs  theme.rs
docs/: AGENTS.md  README.md  deep-research-report.md
docs/adrs/: 001-workspace-crate-structure.md  002-concurrency-model.md  003-wgpu-rendering-pipeline.md  004-hexagonal-architecture.md  007-event-bus.md  008-allocator-strategy.md  009-zero-copy-strategy.md  010-plugin-system.md  README.md  TEMPLATE.md
docs/ai/: AI_CONTEXT_LOADING.md  AI_FORBIDDEN_ACTIONS.md  AI_GUIDELINES.md  AI_MEMORY.md  README.md
docs/architecture/: CONCURRENCY_MODEL.md  CRATE_BOUNDARIES.md  DATA_PIPELINE.md  DEPENDENCY_MAP.md  README.md  SYSTEM_OVERVIEW.md
docs/compliance/: DATA_RETENTION.md  README.md  REGULATORY_REQUIREMENTS.md
docs/connectivity/: BROKER_INTERFACE.md  FIX_PROTOCOL.md  README.md  RECONNECTION_STRATEGY.md  WEBSOCKET_FEED.md
docs/governance/: DECISION_LOG.md  DECISION_PROCESS.md  PROJECT_RULES.md  README.md
docs/gpu/: CHARTING_ARCH.md  README.md  RENDER_PIPELINE.md  SHADER_DESIGN.md  TEXT_RENDERING.md
docs/observability/: LOGGING_POLICY.md  METRICS_DASHBOARD.md  README.md
docs/operations/: CI_CD_PIPELINE.md  CROSS_COMPILATION.md  LICENSE  LICENSING.md  README.md  RELEASE_STRATEGY.md
docs/project/: ASSUMPTIONS.md  NEXT_ACTIONS.md  PROJECT_SCOPE.md  PROJECT_STATE.md  README.md  RISK_REGISTER.md  ROADMAP.md
docs/quality/: ATOMIZED_FILES.md  CODING_STANDARDS.md  DEFINITION_OF_DONE.md  README.md  REVIEW_CHECKLIST.md  TESTING_STANDARDS.md
docs/reference/: INSPIRATION.md  README.md
docs/security/: AUDIT_LOG.md  CREDENTIAL_MANAGEMENT.md  README.md  THREAT_MODEL.md
docs/timelines/: 2026-07-06-project-initialization.md  README.md
docs/trading/: BACKTESTING.md  MARKET_DATA_MODEL.md  OMS_STATE_MACHINE.md  ORDER_TYPES.md  README.md  RISK_RULES.md
docs/ui/: DOM_LADDER.md  HOTKEYS.md  ORDER_ENTRY.md  PANEL_SYSTEM.md  README.md
fuzz/: Cargo.toml
fuzz/targets/: broker_config.rs  market_data_parser.rs  order_state_machine.rs
