[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lucasmanoguerra/velox-terminal"
authors = ["lucasmanoguerra"]

[workspace.dependencies]
# WebSocket
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", features = ["sink"] }
# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrency
crossbeam = "0.8"

# Serialization
rkyv = { version = "0.8", features = ["bytecheck"] }
bincode = "2"
bytemuck = { version = "1", features = ["derive"] }

# Graphics
wgpu = "24"
egui = "0.31"
egui-wgpu = "0.31"
glyphon = "0.6"

# Time
chrono = { version = "0.4", features = ["serde", "now"] }
time = "0.3"

# Data structures
dashmap = "6"
parking_lot = "0.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rsa = "0.9"
keyring = "3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Window system
winit = "0.30"
egui-winit = "0.31"
pollster = "0.3"

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
hex = "0.4"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-safe]
inherits = "release"
opt-level = 2
debug = true
overflow-checks = true
