[package]
name = "velox-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velox-core = { path = "../velox-core" }
tokio.workspace = true
async-trait = "0.1"
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
mockall = "0.13"
tokio = { workspace = true, features = ["test-util"] }
