[package]
name = "velox-exchange"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Exchange connectors: WebSocket, REST, FIX for crypto and traditional brokers"

[dependencies]
velox-core = { path = "../velox-core" }
velox-md = { path = "../velox-md" }
uuid.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true
chrono.workspace = true

# HTTP client
reqwest.workspace = true

# Crypto (HMAC-SHA256 for Binance API signing)
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

# Broker trait (for implementing BrokerClient)
velox-broker = { path = "../velox-broker" }
async-trait = "0.1"

[dev-dependencies]
httpmock = "0.7"


