[package]
name = "velox-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wgpu.workspace = true
glyphon.workspace = true
bytemuck.workspace = true
tracing.workspace = true
thiserror.workspace = true
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
