[package]
name = "velox-indicators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velox-core = { path = "../velox-core" }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[lib]
bench = false
