[package]
name = "velox-oms"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velox-core = { path = "../velox-core" }
crossbeam.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
