[package]
name = "velox-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velox-core = { path = "../velox-core" }
rkyv.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# SQLite for metadata indexing (not for tick data)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile = "3"
