[package]
name = "velox-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
velox-core = { path = "../velox-core" }
velox-md = { path = "../velox-md" }
velox-indicators = { path = "../velox-indicators" }
velox-oms = { path = "../velox-oms" }
velox-risk = { path = "../velox-risk" }
velox-broker = { path = "../velox-broker" }
velox-broker-fix = { path = "../velox-broker-fix" }
velox-storage = { path = "../velox-storage" }
velox-backtest = { path = "../velox-backtest" }
velox-scripting = { path = "../velox-scripting" }
velox-gpu = { path = "../velox-gpu" }
velox-chart = { path = "../velox-chart" }
velox-ui = { path = "../velox-ui" }
velox-exchange = { path = "../velox-exchange" }

# Window + GPU + UI runtime
winit.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
chrono.workspace = true
pollster.workspace = true
fastrand = "2"

# Async + tooling
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }

# Allocator (optional, for production builds)
mimalloc = { workspace = true, optional = true }

[features]
default = []
# Use mimalloc global allocator for reduced fragmentation and better performance.
# Recommended for production builds: --features mimalloc
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "velox-terminal"
path = "src/main.rs"
